# vcpkg-workflow-cross

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
.github/workflows/: ci-cross-compile.yml  compiler-test.yml
